# prosemend

./: CHANGELOG.md  CONTRIBUTING.md  README.ja.md  README.md  README.zh.md  pyproject.toml
docs/: merge-strategy.md
examples/: README.md  base.md  ours.md  theirs.md
scripts/: smoke.sh
src/prosemend/: __init__.py  __main__.py  blocks.py  cli.py  diff3.py  merge.py  render.py  sentences.py  tokens.py  wdiff.py
tests/: conftest.py  test_blocks.py  test_cli.py  test_diff3.py  test_merge.py  test_render.py  test_sentences.py  test_tokens.py
