[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "prosemend"
version = "0.1.0"
description = "Word-level three-way merge for Markdown prose: drastically fewer false conflicts than diff3 and git, as a CLI and a drop-in git merge driver."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "JaydenCJ", email = "aisingioro.kiyon@gmail.com" }]
keywords = ["merge", "diff3", "markdown", "git-merge-driver", "word-diff", "conflict-resolution", "docs-as-code"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Version Control",
    "Topic :: Text Processing :: Markup :: Markdown",
    "Environment :: Console",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
prosemend = "prosemend.cli:main"

[project.urls]
Homepage = "https://github.com/JaydenCJ/prosemend"
Repository = "https://github.com/JaydenCJ/prosemend"
Issues = "https://github.com/JaydenCJ/prosemend/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
